Wed July  5 15:52:31 1995  James Mattly  <mattly@fusion.com>
	* added condition for _MACINTOSH

Sun Jul  2 18:59:53 1995  Sam Hartman  <hartmans@tertius.mit.edu>

	* recvauth.c (krb5_recvauth): recvauth should send an error reply
        if problem is not zero. Removed if that caused it to only send a
        reply on success.

Fri Jun 16 22:11:21 1995  Theodore Y. Ts'o  (tytso@dcl)

	* get_in_tkt.c (krb5_get_in_tkt): Allow the credentials cache
		argument to be optional; allow it to be NULL, meaning that
		the credentials shouldn't be stored in a credentials cache.

Mon Jun 12 16:49:42 1995  Chris Provenzano (proven@mit.edu)

	A couple bug reports/patches from Ed Phillips (flaregun@udel.edu)
	* in_tkt_ktb.c (keytab_keyproc()): Fix memory leak. 
	* recvauth.c (krb5_recvauth()): Don't open a new rcache if
		the auth_context already has one.
	* auth_con.c (krb5_auth_con_free()): Close rcache is the
		auth_context has one set.
	* auth_con.c (krb5_auth_con_getrcache()): Return pointer
		to the rcache set in the auth_context.

Sun Jun 11 12:31:39 1995  Ezra Peisach  (epeisach@kangaroo.mit.edu)

	* auth_con.c (krb5_auth_con_init): Zero newly allocated
		krb5_auth_context. (Fixed error in redefinitions).

Sat Jun 10 23:05:51 1995  Tom Yu  (tlyu@dragons-lair)

	* auth_con.c, compat_recv.c, mk_cred.c, mk_priv.c, mk_rep.c,
	  mk_req.c, mk_req_ext.c, mk_safe.c, rd_cred.c, rd_priv.c,
	  rd_rep.c, rd_req.c rd_req_dec.c, rd_safe.c, recvauth.c,
	  sendauth.c: krb5_auth_context redefinitions

Fri Jun  9 18:48:43 1995    <tytso@rsx-11.mit.edu>

	* rd_req_dec.c (krb5_rd_req_decoded): Fix -Wall nits

	* configure.in: Remove standardized set of autoconf macros, which
		are now handled by CONFIG_RULES.

	* Makefile.in, faddr_ordr.c: Remove faddr_ordr.c; its function,
		krb5_fulladdr_order, isn't used anywhere.

Fri Jun  9 02:42:54 1995  Tom Yu  (tlyu@dragons-lair)

	* rd_cred.c (krb5_rd_cred_basic): fix typo (extra "context"
		argument passed to krb5_xfree)
